// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav - NavLink renders as a button 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  color: #8697A2;
  -webkit-transition: color 0.4s ease;
  transition: color 0.4s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 1.5rem;
  left: 0;
  right: 0;
  bottom: -0.5rem;
  margin: 0 auto;
  background-color: #0CD664;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.4s ease;
  -webkit-transition: transform 0.4s ease;
  transition: transform 0.4s ease;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active,
.emotion-0[aria-current=page] {
  color: #fff;
  cursor: pointer;
}

.emotion-0:hover:after,
.emotion-0:focus:after,
.emotion-0:active:after,
.emotion-0[aria-current=page]:after {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

<button
  className="emotion-0"
  onClick={[Function]}
>
  Sample link
</button>
`;

exports[`Nav - NavLink renders as a component 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  color: #8697A2;
  -webkit-transition: color 0.4s ease;
  transition: color 0.4s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 1.5rem;
  left: 0;
  right: 0;
  bottom: -0.5rem;
  margin: 0 auto;
  background-color: #0CD664;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.4s ease;
  -webkit-transition: transform 0.4s ease;
  transition: transform 0.4s ease;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active,
.emotion-0[aria-current=page] {
  color: #fff;
  cursor: pointer;
}

.emotion-0:hover:after,
.emotion-0:focus:after,
.emotion-0:active:after,
.emotion-0[aria-current=page]:after {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

<a
  className="emotion-0"
  id="test-link"
>
  Sample link
</a>
`;

exports[`Nav - NavLink renders as active as a button 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  color: #8697A2;
  -webkit-transition: color 0.4s ease;
  transition: color 0.4s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 1.5rem;
  left: 0;
  right: 0;
  bottom: -0.5rem;
  margin: 0 auto;
  background-color: #0CD664;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.4s ease;
  -webkit-transition: transform 0.4s ease;
  transition: transform 0.4s ease;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active,
.emotion-0[aria-current=page] {
  color: #fff;
  cursor: pointer;
}

.emotion-0:hover:after,
.emotion-0:focus:after,
.emotion-0:active:after,
.emotion-0[aria-current=page]:after {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

<button
  aria-current="page"
  className="emotion-0"
  onClick={[Function]}
>
  Sample link
</button>
`;

exports[`Nav - NavLink renders as active as a component 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  color: #8697A2;
  -webkit-transition: color 0.4s ease;
  transition: color 0.4s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 1.5rem;
  left: 0;
  right: 0;
  bottom: -0.5rem;
  margin: 0 auto;
  background-color: #0CD664;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.4s ease;
  -webkit-transition: transform 0.4s ease;
  transition: transform 0.4s ease;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active,
.emotion-0[aria-current=page] {
  color: #fff;
  cursor: pointer;
}

.emotion-0:hover:after,
.emotion-0:focus:after,
.emotion-0:active:after,
.emotion-0[aria-current=page]:after {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

<a
  aria-current="page"
  className="emotion-0"
  id="test-link"
>
  Sample link
</a>
`;

exports[`Nav - NavLink renders as active as an anchor 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  color: #8697A2;
  -webkit-transition: color 0.4s ease;
  transition: color 0.4s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 1.5rem;
  left: 0;
  right: 0;
  bottom: -0.5rem;
  margin: 0 auto;
  background-color: #0CD664;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.4s ease;
  -webkit-transition: transform 0.4s ease;
  transition: transform 0.4s ease;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active,
.emotion-0[aria-current=page] {
  color: #fff;
  cursor: pointer;
}

.emotion-0:hover:after,
.emotion-0:focus:after,
.emotion-0:active:after,
.emotion-0[aria-current=page]:after {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

<a
  className="emotion-0"
  href="#"
>
  Sample link
</a>
`;

exports[`Nav - NavLink renders as an anchor by default 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  color: #8697A2;
  -webkit-transition: color 0.4s ease;
  transition: color 0.4s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 1.5rem;
  left: 0;
  right: 0;
  bottom: -0.5rem;
  margin: 0 auto;
  background-color: #0CD664;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.4s ease;
  -webkit-transition: transform 0.4s ease;
  transition: transform 0.4s ease;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active,
.emotion-0[aria-current=page] {
  color: #fff;
  cursor: pointer;
}

.emotion-0:hover:after,
.emotion-0:focus:after,
.emotion-0:active:after,
.emotion-0[aria-current=page]:after {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

<a
  className="emotion-0"
  href="#"
>
  Sample link
</a>
`;
